updated with full javascript functions

--- a/index.html
+++ b/index.html
@@ -244,17 +244,17 @@
                     <ul class="list-inline social-icons">
                         <li class="list-inline-item">
                             <a href="https://www.facebook.com/yourprofile" target="_blank">
-                                <img src="../images/facebook.png" alt="Facebook" class="social-icon">
+                                <img src="images/facebook.png" alt="Facebook" class="social-icon">
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.instagram.com/yourprofile" target="_blank">
-                                <img src="../images/instagram (1).png" alt="Instagram" class="social-icon">
+                                <img src="images/instagram (1).png" alt="Instagram" class="social-icon">
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://x.com/yourprofile" target="_blank">
-                                <img src="../images/twitter2.png" alt="X" class="social-icon">
+                                <img src="images/twitter2.png" alt="X" class="social-icon">
                             </a>
                         </li>
                     </ul>
