--- a/pages/contact.html
+++ b/pages/contact.html
@@ -56,7 +56,7 @@
                         <h1 class="section-title">Contact Us</h1>
                         <p class="lead">Feel free to reach out through the following channels:</p>
                         <ul class="list-unstyled mb-4">
-                            <li><i class="fas fa-envelope me-2"></i> <a href="mailto:honey@example.com">honey@example.com</a></li>
+                            <li><i class="fas fa-envelope me-2"></i> <a href="mailto:wander&explore@example.com">wander&explore@explore.com</a></li>
                             <li><i class="fas fa-phone me-2"></i> +63 123 456 7890</li>
                         </ul>
 
