--- a/pages/cebu.html
+++ b/pages/cebu.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+    <div class="falling-leaves">
+        <div class="leaf"></div>
+    </div>
     <!-- Header -->
  
     <header class="custom-header">
