--- a/pages/taiwan.html
+++ b/pages/taiwan.html
@@ -15,11 +15,10 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
-<body data-page="taiwan"> 
+<body> 
 
     <div class="falling-leaves">
         <div class="leaf"></div>
-    
     </div>
    
    <!-- Header -->
