--- a/pages/bacolod.html
+++ b/pages/bacolod.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-      <!-- Header -->
+    <div class="falling-leaves">
+        <div class="leaf"></div>
+    </div>
      <!-- Header -->
     <header class="custom-header">
         <nav class="navbar navbar-expand-lg navbar-dark">
